--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,15 @@ name = "dyndns6d"
 version = "0.1.0"
 authors = ["Astro <astro@spaceboyz.net>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "GPL-3.0-or-later"
 
 [dependencies]
 futures = "0.3"
 tokio = { version = "1.5", features = ["full", "rt"] }
 rtnetlink = "0.7"
 netlink-packet-route = "0.7"
+trust-dns-client = "0.20"
+once_cell = "1"
+hmac = "0.11"
+sha2 = "0.9"
 
