--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ futures = "0.3"
 tokio = { version = "1.5", features = ["full", "rt"] }
 rtnetlink = "0.7"
 netlink-packet-route = "0.7"
-trust-dns-client = "0.20"
+trust-dns-client = { version = "0.21.0-alpha.1", features = [ "dnssec" ] }
 once_cell = "1"
 hmac = "0.11"
 sha2 = "0.9"
