--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,7 @@ trust-dns-client = { version = "0.21.0-alpha.1", features = [ "dnssec" ] }
 once_cell = "1"
 hmac = "0.11"
 sha2 = "0.9"
-
+serde = "1"
+serde_derive = "1"
+toml = "0.5"
+cidr = "0.2"
