--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ documentation = "https://docs.rs/ifdyndnsd"
 [dependencies]
 futures = "0.3"
 tokio = { version = "1", features = ["full", "rt"] }
-rtnetlink = "0.8"
-netlink-packet-route = "0.8"
-trust-dns-client = { version = "0.21.0-alpha.4", features = [ "dnssec" ] }
+rtnetlink = "0.9"
+netlink-packet-route = "0.11"
+trust-dns-client = { version = "0.21", features = [ "dnssec" ] }
 once_cell = "1"
-hmac = "0.11"
-sha2 = "0.9"
+hmac = "0.12"
+sha2 = "0.10"
 serde = "1"
 serde_derive = "1"
 toml = "0.5"
