--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -61,4 +61,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: -- -D clippy::pedantic -D warnings -A clippy::await-holding-refcell-ref
+          args: -- -D clippy::pedantic -D warnings -A clippy::await-holding-refcell-ref -A clippy::cast-possible-truncation
