--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ futures = "0.3"
 tokio = { version = "1", features = ["full", "rt"] }
 rtnetlink = "0.12"
 netlink-packet-route = "0.15"
-trust-dns-client = { version = "0.22", features = [ "dnssec" ] }
+trust-dns-client = { version = "0.22", features = ["dnssec", "dnssec-ring"] }
 once_cell = "1"
 hmac = "0.12"
 sha2 = "0.10"
