--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ futures = "0.3"
 tokio = { version = "1", features = ["full", "rt"] }
 rtnetlink = "0.14"
 netlink-packet-route = "0.19"
-hickory-client = { version = "0.24", features = ["dnssec", "dnssec-ring"] }
+hickory-client = { version = "0.25", features = ["dnssec-ring"] }
 once_cell = "1"
 serde = "1"
 serde_derive = "1"
